[package]
name = "solark_monitor2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.3.8", features=["rt-multi-thread"]}
#tokio-modbus = {version="0.13.1", default-features=false, features=["rtu"]}
tokio-modbus = {version="*", default-features=false, features=["rtu"]}
tokio-serial = "5.4.4"
influxdb2 = "0.5.1"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk.git" }
futures = "0.3.30"
config = {version="*" , default-features=false, features=["async", "toml"]}
serde = "*"
chrono = {version="*", features=["now"]}
