[package]
name = "solark_monitor2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="*", features=["rt-multi-thread"]}
#tokio-modbus = {version="0.13.1", default-features=false, features=["rtu"]}
tokio-modbus = {version="*", default-features=false, features=["rtu"]}
tokio-serial = "*"
influxdb2 = "*"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk.git" }
futures = "*"
config = {version="*" , default-features=false, features=["async", "toml"]}
serde = "*"
chrono = {version="*", features=["now"]}
